<resources>
    <string name="appName">ITindr</string>

    // Start Screen
    <string name="startText">Ты найдешь того, кто\nпоревьюит твой код</string>
    <string name="register">Зарегистрироваться</string>
    <string name="logIn">Войти</string>

    // Auth Errors
    <string name="emptyField">Поле должно быть заполнено</string>
    <string name="invalidEmail">Неверный формат E-mail</string>
    <string name="passwordTooShort">Пароль должен быть не менее 8 символов</string>
    <string name="passwordsMismatch">Пароли не совпадают</string>

    // Dialogs
    <string name="chooseAvatar">Выберите фото</string>
    <string name="makePhoto">Сделать фото</string>
    <string name="pickFromGallery">Выбрать из галереи</string>
    <string name="loading">Загрузка..</string>
    <string name="error">Ошибка</string>
    <string name="networkError">Ошибка сети</string>
    <string name="topicsError">Ошибка при загрузке списка интересов</string>
    <string name="saveError">Ошибка при сохранении</string>
    <string name="savePhotoError">Ошибка при сохранении фото</string>
    <string name="registerError">Произошла ошибка при регистрации. Попробуйте еще раз!</string>
    <string name="loginError">Неверный логин или пароль</string>
    <string name="ok">ОК</string>

    // Register Screen
    <string name="registration">Регистрация</string>
    <string name="email">E-mail</string>
    <string name="password">Пароль</string>
    <string name="repeatPassword">Повторите пароль</string>
    <string name="back">Назад</string>

    // Login Screen
    <string name="authorization">Авторизация</string>

    // About Yourself Screen
    <string name="tellAboutYourself">Расскажи о себе</string>
    <string name="choosePhoto">Выбрать фото</string>
    <string name="removePhoto">Удалить фото</string>
    <string name="name">Имя</string>
    <string name="aboutYourself">О себе</string>
    <string name="specifyInterests">Укажи интересы</string>
    <string name="save">Сохранить</string>

    // Feed Screen
    <string name="like">Лайк</string>
    <string name="dislike">Отказ</string>
    <string name="emptyFeed">Кажется, сейчас нет анкет, которые мы могли бы тебе порекомендовать. Попробуй посмотреть позже!</string>

    // Bottom Navigation
    <string name="feed">Поиск</string>
    <string name="people">Люди</string>
    <string name="chats">Чаты</string>
    <string name="profile">Профиль</string>

    // Match Screen
    <string name="yourInterfacesMatched">Ваши интерфейсы подошли друг к другу</string>
    <string name="writeMessage">Написать сообщение</string>
    <string name="itsMatch">Мэтч!</string>

    // Chat Previews Screen
    <string name="emptyChatPlaceholder">Напишите первое сообщение!</string>

    // Chat Screen
    <string name="chatDateTime">%1$s • %2$s</string>
    <string name="cameraButtonDescription">Прикрепить фотографию</string>
    <string name="messageHint">Сообщение...</string>

    // Profile Screen
    <string name="edit">Редактировать</string>
    <string name="editing">Редактирование</string>
    <string name="interests">Интересы</string>
</resources>