<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".profile.presentation.view.OtherProfileFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:navigationIconTint="@color/primary"
        app:title="@string/profile"
        app:titleTextAppearance="@style/type_sb20"
        app:titleTextColor="@color/primary" />

    <View
        android:id="@+id/toolbarShadow"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:elevation="1dp"
        android:background="@drawable/toolbar_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollableContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_xlarge"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/userAvatarImage"
                android:layout_width="206dp"
                android:layout_height="206dp"
                android:background="@drawable/photo_placeholder"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                style="@style/type_b24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userAvatarImage"
                tools:text="Андрей Иванов" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/interestsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_medium"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/padding_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNameText"
                tools:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                tools:listitem="@layout/item_topic" />

            <TextView
                android:id="@+id/aboutUserText"
                style="@style/type_r16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_regular"
                android:paddingHorizontal="@dimen/padding_medium"
                android:textAlignment="center"
                android:layout_marginBottom="178dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/interestsRecyclerView"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="Люблю программировать на питоне. Люблю изучать питон. Люблю всё, что угодно, связанное с питоном. А еще я люблю перл." />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dislikeButton"
        style="@style/icon_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/padding_medium"
        android:layout_marginBottom="@dimen/padding_regular"
        app:icon="@drawable/ic_cross"
        app:iconTint="@color/primary"
        android:backgroundTint="@color/white"
        android:text="@string/dislike"
        android:textColor="@color/on_secondary_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/likeButton"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likeButton"
        style="@style/icon_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/padding_medium"
        android:layout_marginBottom="@dimen/padding_regular"
        app:icon="@drawable/ic_heart"
        app:iconTint="@color/white"
        app:backgroundTint="@null"
        android:background="@drawable/primary_button_background"
        android:text="@string/like"
        android:textColor="@color/on_primary_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dislikeButton"
        app:layout_constraintHorizontal_weight="1" />

</androidx.constraintlayout.widget.ConstraintLayout>